--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "wrangler",
+	"name": "shenshan",
 	"version": "2.8.1",
 	"description": "Command-line interface for all things Cloudflare Workers",
 	"keywords": [
