--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "shenshan",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "Command-line interface for all things Cloudflare Workers",
 	"keywords": [
 		"wrangler",
@@ -38,8 +38,8 @@
 	"main": "wrangler-dist/cli.js",
 	"types": "wrangler-dist/cli.d.ts",
 	"bin": {
-		"ss": "./bin/wrangler.js",
-		"wg": "./bin/wrangler.js"
+		"wrangler": "./bin/wrangler.js",
+		"wrangler2": "./bin/wrangler.js"
 	},
 	"files": [
 		"src",
