--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "shenshan",
+	"name": "@mistakes333/shenshan",
 	"version": "1.0.1",
 	"description": "Command-line interface for all things Cloudflare Workers",
 	"keywords": [
@@ -39,7 +39,7 @@
 	"types": "wrangler-dist/cli.d.ts",
 	"bin": {
 		"wrangler": "./bin/wrangler.js",
-		"wrangler2": "./bin/wrangler.js"
+		"wg3": "./bin/wrangler.js"
 	},
 	"files": [
 		"src",
